fixed some mobile sizing issues by puting hacker news title outside of the top/new buttons container in nav.js, changed some amrgin and paddings that looked terrible on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ h1 {
 .container {
    max-width: 1200px;
    margin: 0 auto;
-   padding: 50px;
+   padding: 40px;
 }
 
 .header {
